--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,9 +27,12 @@ a {
     text-decoration-style: solid;
 }
 
-div#login{
-
+.negada{
+    position: absolute;
+    left: 35%;
+    top: 30%;
 }
+
 
 .next{
     background-color: #4CAF50;
@@ -46,5 +49,8 @@ div#login{
 .floatLeft{
     float:left
 }
+
+
+
 
 
