--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,3 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@charset "UTF-8";
 
-// Variables
-@import 'variables';
-
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~materialize-css/sass/materialize";
